fixed list alignment

--- a/stylesheets/css/app.css
+++ b/stylesheets/css/app.css
@@ -2659,14 +2659,14 @@ a.nav--tab-pill_item {
     white-space: nowrap;
     text-align: right; }
   .list_item_column-checkbox {
-    width: 40px; }
+    width: 32px; }
     .list_item_column-checkbox > input {
       display: block;
       margin-left: auto;
       margin-right: auto;
       width: 20px; }
   .list_item_column-icon {
-    width: 40px; }
+    width: 32px; }
     .list_item_column-icon > i {
       color: #a4b0ba;
       font-size: 24px; }
@@ -2689,7 +2689,7 @@ a.nav--tab-pill_item {
   .list_item--folder > .list_item_column-icon > i {
     color: #435561; }
   .list_item--folder_column-expandable {
-    width: 40px; }
+    width: 32px; }
 
 .list.is-cozy > li > .list_item {
   height: 80px; }
